--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,7 @@ footer{
 }
 
 footer section{
+    
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -180,11 +181,12 @@ footer section{
 }
 
 .map{
-    width: 25%;
-
+    width: 35%;
+    margin-top: 3rem;
 }
 
 .map img {
+   
     width: 100%;
     margin-top: 4rem;
     margin-bottom: 4rem
@@ -193,6 +195,7 @@ footer section{
 
 
 .social-media{
+    margin-top: 2.5rem;
     width: 27%;
     font-size: 2rem;
     display: flex;
@@ -209,7 +212,7 @@ footer section{
 }
 
 .social-media div p {
-    line-height: 3rem;
+    line-height: 5rem;
 }
 
 .social-media h2{
